--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supabase-with-openai",
+  "name": "brain-search",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,7 +26,7 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
-    "class-variance-authority": "^0.4.0",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "common-tags": "^1.8.2",
